--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,5 +24,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-
+    <Button
+        android:id="@+id/compress"
+        android:layout_width="80dp"
+        android:text="压缩"
+        android:layout_gravity="bottom"
+        android:layout_margin="20dp"
+        android:layout_height="48dp"/>
 </FrameLayout>
